package com.example.listener

interface CarFactory {
    fun createCar(): Car
}