@startuml
'https://plantuml.com/class-diagram

interface Car
interface CarFactory
class PassengerCar
class CargoCar
class CargoPassengerCar
class PassengerFactory
class CargoFactory
class CargoPassengerFactory

PassengerCar <|-- Car
CargoCar <|-- Car
CargoPassengerCar <|-- Car

PassengerFactory <|-- CarFactory
CargoFactory <|-- CarFactory
CargoPassengerFactory <|-- CarFactory


@enduml